y.output
   0  $accept : program $end

   1  program : function
   2          | error

   3  function : function stmt
   4           |

   5  stmt : SEMICOLON
   6       | expr SEMICOLON
   7       | PRINT LEFT_PAREN expr RIGHT_PAREN SEMICOLON
   8       | IDENTIFIER EQUALS expr SEMICOLON
   9       | IDENTIFIER PLUS_EQUALS expr SEMICOLON
  10       | IDENTIFIER MINUS_EQUALS expr SEMICOLON
  11       | WHILE expr DO stmt_list ENDWHILE SEMICOLON
  12       | IF expr THEN stmt_list ENDIF SEMICOLON
  13       | IF expr THEN stmt_list ELSE stmt_list ENDIF SEMICOLON
  14       | DEFINE IDENTIFIER EQUALS expr SEMICOLON
  15       | object_creation
  16       | collision_handler
  17       | LEFT_BRACE stmt_list RIGHT_BRACE
  18       | FUNCTION IDENTIFIER LEFT_PAREN parameter_list RIGHT_PAREN LEFT_BRACE stmt_list RIGHT_BRACE
  19       | function_call SEMICOLON
  20       | return_stmt
  21       | error SEMICOLON

  22  object_creation : CREATE IDENTIFIER AS PLAYER LEFT_BRACE property_list RIGHT_BRACE SEMICOLON
  23                  | CREATE IDENTIFIER AS ENEMY LEFT_BRACE property_list RIGHT_BRACE SEMICOLON
  24                  | CREATE IDENTIFIER AS PLATFORM LEFT_BRACE property_list RIGHT_BRACE SEMICOLON
  25                  | CREATE IDENTIFIER AS ITEM LEFT_BRACE property_list RIGHT_BRACE SEMICOLON
  26                  | CREATE IDENTIFIER AS GAME LEFT_BRACE property_list RIGHT_BRACE SEMICOLON
  27                  | CREATE IDENTIFIER AS LEVEL LEFT_BRACE property_list RIGHT_BRACE SEMICOLON

  28  property_list : property
  29                | property property_list

  30  property : IDENTIFIER EQUALS property_value SEMICOLON

  31  property_value : expr
  32                 | array_literal

  33  array_literal : LEFT_BRACKET argument_list RIGHT_BRACKET

  34  member_access : IDENTIFIER DOT IDENTIFIER
  35                | member_access DOT IDENTIFIER

  36  collision_handler : ON COLLISION LEFT_PAREN IDENTIFIER COMMA IDENTIFIER RIGHT_PAREN LEFT_BRACE stmt_list RIGHT_BRACE

  37  parameter_list :
  38                 | IDENTIFIER
  39                 | IDENTIFIER COMMA parameter_list

  40  function_call : IDENTIFIER LEFT_PAREN argument_list RIGHT_PAREN

  41  argument_list :
  42                | expr
  43                | expr COMMA argument_list

  44  return_stmt : RETURN expr SEMICOLON

  45  stmt_list : stmt
  46            | stmt_list stmt

  47  expr : INTEGER
  48       | FLOAT
  49       | STRING
  50       | IDENTIFIER
  51       | TRUE
  52       | FALSE
  53       | member_access
  54       | MINUS expr
  55       | NOT expr
  56       | expr PLUS expr
  57       | expr MINUS expr
  58       | expr MULTIPLY expr
  59       | expr DIVIDE expr
  60       | expr AND expr
  61       | expr OR expr
  62       | expr LESS_THAN expr
  63       | expr GREATER_THAN expr
  64       | expr LESS_THAN_EQUALS expr
  65       | expr GREATER_THAN_EQUALS expr
  66       | expr NOT_EQUALS expr
  67       | expr EQUALS_EQUALS expr
  68       | LEFT_PAREN expr RIGHT_PAREN
  69       | function_call

0: shift/reduce conflict (shift 1, reduce 4) on error
state 0
	$accept : . program $end  (0)
	function : .  (4)

	error  shift 1
	$end  reduce 4
	INTEGER  reduce 4
	FLOAT  reduce 4
	IDENTIFIER  reduce 4
	STRING  reduce 4
	TRUE  reduce 4
	FALSE  reduce 4
	WHILE  reduce 4
	IF  reduce 4
	PRINT  reduce 4
	RETURN  reduce 4
	FUNCTION  reduce 4
	DEFINE  reduce 4
	CREATE  reduce 4
	ON  reduce 4
	MINUS  reduce 4
	SEMICOLON  reduce 4
	LEFT_PAREN  reduce 4
	LEFT_BRACE  reduce 4
	NOT  reduce 4

	program  goto 2
	function  goto 3


state 1
	program : error .  (2)

	.  reduce 2


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : function .  (1)
	function : function . stmt  (3)

	error  shift 4
	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 7
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	WHILE  shift 11
	IF  shift 12
	PRINT  shift 13
	RETURN  shift 14
	FUNCTION  shift 15
	DEFINE  shift 16
	CREATE  shift 17
	ON  shift 18
	MINUS  shift 19
	SEMICOLON  shift 20
	LEFT_PAREN  shift 21
	LEFT_BRACE  shift 22
	NOT  shift 23
	$end  reduce 1

	stmt  goto 24
	expr  goto 25
	function_call  goto 26
	return_stmt  goto 27
	member_access  goto 28
	object_creation  goto 29
	collision_handler  goto 30


state 4
	stmt : error . SEMICOLON  (21)

	SEMICOLON  shift 31
	.  error


state 5
	expr : INTEGER .  (47)

	.  reduce 47


state 6
	expr : FLOAT .  (48)

	.  reduce 48


state 7
	stmt : IDENTIFIER . EQUALS expr SEMICOLON  (8)
	stmt : IDENTIFIER . PLUS_EQUALS expr SEMICOLON  (9)
	stmt : IDENTIFIER . MINUS_EQUALS expr SEMICOLON  (10)
	member_access : IDENTIFIER . DOT IDENTIFIER  (34)
	function_call : IDENTIFIER . LEFT_PAREN argument_list RIGHT_PAREN  (40)
	expr : IDENTIFIER .  (50)

	EQUALS  shift 32
	LEFT_PAREN  shift 33
	DOT  shift 34
	PLUS_EQUALS  shift 35
	MINUS_EQUALS  shift 36
	PLUS  reduce 50
	MINUS  reduce 50
	MULTIPLY  reduce 50
	DIVIDE  reduce 50
	LESS_THAN  reduce 50
	GREATER_THAN  reduce 50
	EQUALS_EQUALS  reduce 50
	NOT_EQUALS  reduce 50
	LESS_THAN_EQUALS  reduce 50
	GREATER_THAN_EQUALS  reduce 50
	SEMICOLON  reduce 50
	AND  reduce 50
	OR  reduce 50


state 8
	expr : STRING .  (49)

	.  reduce 49


state 9
	expr : TRUE .  (51)

	.  reduce 51


state 10
	expr : FALSE .  (52)

	.  reduce 52


state 11
	stmt : WHILE . expr DO stmt_list ENDWHILE SEMICOLON  (11)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 38
	function_call  goto 39
	member_access  goto 28


state 12
	stmt : IF . expr THEN stmt_list ENDIF SEMICOLON  (12)
	stmt : IF . expr THEN stmt_list ELSE stmt_list ENDIF SEMICOLON  (13)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 40
	function_call  goto 39
	member_access  goto 28


state 13
	stmt : PRINT . LEFT_PAREN expr RIGHT_PAREN SEMICOLON  (7)

	LEFT_PAREN  shift 41
	.  error


state 14
	return_stmt : RETURN . expr SEMICOLON  (44)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 42
	function_call  goto 39
	member_access  goto 28


state 15
	stmt : FUNCTION . IDENTIFIER LEFT_PAREN parameter_list RIGHT_PAREN LEFT_BRACE stmt_list RIGHT_BRACE  (18)

	IDENTIFIER  shift 43
	.  error


state 16
	stmt : DEFINE . IDENTIFIER EQUALS expr SEMICOLON  (14)

	IDENTIFIER  shift 44
	.  error


state 17
	object_creation : CREATE . IDENTIFIER AS PLAYER LEFT_BRACE property_list RIGHT_BRACE SEMICOLON  (22)
	object_creation : CREATE . IDENTIFIER AS ENEMY LEFT_BRACE property_list RIGHT_BRACE SEMICOLON  (23)
	object_creation : CREATE . IDENTIFIER AS PLATFORM LEFT_BRACE property_list RIGHT_BRACE SEMICOLON  (24)
	object_creation : CREATE . IDENTIFIER AS ITEM LEFT_BRACE property_list RIGHT_BRACE SEMICOLON  (25)
	object_creation : CREATE . IDENTIFIER AS GAME LEFT_BRACE property_list RIGHT_BRACE SEMICOLON  (26)
	object_creation : CREATE . IDENTIFIER AS LEVEL LEFT_BRACE property_list RIGHT_BRACE SEMICOLON  (27)

	IDENTIFIER  shift 45
	.  error


state 18
	collision_handler : ON . COLLISION LEFT_PAREN IDENTIFIER COMMA IDENTIFIER RIGHT_PAREN LEFT_BRACE stmt_list RIGHT_BRACE  (36)

	COLLISION  shift 46
	.  error


state 19
	expr : MINUS . expr  (54)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 47
	function_call  goto 39
	member_access  goto 28


state 20
	stmt : SEMICOLON .  (5)

	.  reduce 5


state 21
	expr : LEFT_PAREN . expr RIGHT_PAREN  (68)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 48
	function_call  goto 39
	member_access  goto 28


state 22
	stmt : LEFT_BRACE . stmt_list RIGHT_BRACE  (17)

	error  shift 4
	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 7
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	WHILE  shift 11
	IF  shift 12
	PRINT  shift 13
	RETURN  shift 14
	FUNCTION  shift 15
	DEFINE  shift 16
	CREATE  shift 17
	ON  shift 18
	MINUS  shift 19
	SEMICOLON  shift 20
	LEFT_PAREN  shift 21
	LEFT_BRACE  shift 22
	NOT  shift 23
	.  error

	stmt  goto 49
	expr  goto 25
	stmt_list  goto 50
	function_call  goto 26
	return_stmt  goto 27
	member_access  goto 28
	object_creation  goto 29
	collision_handler  goto 30


state 23
	expr : NOT . expr  (55)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 51
	function_call  goto 39
	member_access  goto 28


state 24
	function : function stmt .  (3)

	.  reduce 3


state 25
	stmt : expr . SEMICOLON  (6)
	expr : expr . PLUS expr  (56)
	expr : expr . MINUS expr  (57)
	expr : expr . MULTIPLY expr  (58)
	expr : expr . DIVIDE expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . LESS_THAN expr  (62)
	expr : expr . GREATER_THAN expr  (63)
	expr : expr . LESS_THAN_EQUALS expr  (64)
	expr : expr . GREATER_THAN_EQUALS expr  (65)
	expr : expr . NOT_EQUALS expr  (66)
	expr : expr . EQUALS_EQUALS expr  (67)

	PLUS  shift 52
	MINUS  shift 53
	MULTIPLY  shift 54
	DIVIDE  shift 55
	LESS_THAN  shift 56
	GREATER_THAN  shift 57
	EQUALS_EQUALS  shift 58
	NOT_EQUALS  shift 59
	LESS_THAN_EQUALS  shift 60
	GREATER_THAN_EQUALS  shift 61
	SEMICOLON  shift 62
	AND  shift 63
	OR  shift 64
	.  error


26: shift/reduce conflict (shift 65, reduce 69) on SEMICOLON
state 26
	stmt : function_call . SEMICOLON  (19)
	expr : function_call .  (69)

	SEMICOLON  shift 65
	PLUS  reduce 69
	MINUS  reduce 69
	MULTIPLY  reduce 69
	DIVIDE  reduce 69
	LESS_THAN  reduce 69
	GREATER_THAN  reduce 69
	EQUALS_EQUALS  reduce 69
	NOT_EQUALS  reduce 69
	LESS_THAN_EQUALS  reduce 69
	GREATER_THAN_EQUALS  reduce 69
	AND  reduce 69
	OR  reduce 69


state 27
	stmt : return_stmt .  (20)

	.  reduce 20


state 28
	member_access : member_access . DOT IDENTIFIER  (35)
	expr : member_access .  (53)

	DOT  shift 66
	DO  reduce 53
	THEN  reduce 53
	PLUS  reduce 53
	MINUS  reduce 53
	MULTIPLY  reduce 53
	DIVIDE  reduce 53
	LESS_THAN  reduce 53
	GREATER_THAN  reduce 53
	EQUALS_EQUALS  reduce 53
	NOT_EQUALS  reduce 53
	LESS_THAN_EQUALS  reduce 53
	GREATER_THAN_EQUALS  reduce 53
	SEMICOLON  reduce 53
	COMMA  reduce 53
	RIGHT_PAREN  reduce 53
	RIGHT_BRACKET  reduce 53
	AND  reduce 53
	OR  reduce 53


state 29
	stmt : object_creation .  (15)

	.  reduce 15


state 30
	stmt : collision_handler .  (16)

	.  reduce 16


state 31
	stmt : error SEMICOLON .  (21)

	.  reduce 21


state 32
	stmt : IDENTIFIER EQUALS . expr SEMICOLON  (8)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 67
	function_call  goto 39
	member_access  goto 28


state 33
	function_call : IDENTIFIER LEFT_PAREN . argument_list RIGHT_PAREN  (40)
	argument_list : .  (41)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	RIGHT_PAREN  reduce 41

	expr  goto 68
	function_call  goto 39
	argument_list  goto 69
	member_access  goto 28


state 34
	member_access : IDENTIFIER DOT . IDENTIFIER  (34)

	IDENTIFIER  shift 70
	.  error


state 35
	stmt : IDENTIFIER PLUS_EQUALS . expr SEMICOLON  (9)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 71
	function_call  goto 39
	member_access  goto 28


state 36
	stmt : IDENTIFIER MINUS_EQUALS . expr SEMICOLON  (10)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 72
	function_call  goto 39
	member_access  goto 28


state 37
	member_access : IDENTIFIER . DOT IDENTIFIER  (34)
	function_call : IDENTIFIER . LEFT_PAREN argument_list RIGHT_PAREN  (40)
	expr : IDENTIFIER .  (50)

	LEFT_PAREN  shift 33
	DOT  shift 34
	DO  reduce 50
	THEN  reduce 50
	PLUS  reduce 50
	MINUS  reduce 50
	MULTIPLY  reduce 50
	DIVIDE  reduce 50
	LESS_THAN  reduce 50
	GREATER_THAN  reduce 50
	EQUALS_EQUALS  reduce 50
	NOT_EQUALS  reduce 50
	LESS_THAN_EQUALS  reduce 50
	GREATER_THAN_EQUALS  reduce 50
	SEMICOLON  reduce 50
	COMMA  reduce 50
	RIGHT_PAREN  reduce 50
	RIGHT_BRACKET  reduce 50
	AND  reduce 50
	OR  reduce 50


state 38
	stmt : WHILE expr . DO stmt_list ENDWHILE SEMICOLON  (11)
	expr : expr . PLUS expr  (56)
	expr : expr . MINUS expr  (57)
	expr : expr . MULTIPLY expr  (58)
	expr : expr . DIVIDE expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . LESS_THAN expr  (62)
	expr : expr . GREATER_THAN expr  (63)
	expr : expr . LESS_THAN_EQUALS expr  (64)
	expr : expr . GREATER_THAN_EQUALS expr  (65)
	expr : expr . NOT_EQUALS expr  (66)
	expr : expr . EQUALS_EQUALS expr  (67)

	DO  shift 73
	PLUS  shift 52
	MINUS  shift 53
	MULTIPLY  shift 54
	DIVIDE  shift 55
	LESS_THAN  shift 56
	GREATER_THAN  shift 57
	EQUALS_EQUALS  shift 58
	NOT_EQUALS  shift 59
	LESS_THAN_EQUALS  shift 60
	GREATER_THAN_EQUALS  shift 61
	AND  shift 63
	OR  shift 64
	.  error


state 39
	expr : function_call .  (69)

	.  reduce 69


state 40
	stmt : IF expr . THEN stmt_list ENDIF SEMICOLON  (12)
	stmt : IF expr . THEN stmt_list ELSE stmt_list ENDIF SEMICOLON  (13)
	expr : expr . PLUS expr  (56)
	expr : expr . MINUS expr  (57)
	expr : expr . MULTIPLY expr  (58)
	expr : expr . DIVIDE expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . LESS_THAN expr  (62)
	expr : expr . GREATER_THAN expr  (63)
	expr : expr . LESS_THAN_EQUALS expr  (64)
	expr : expr . GREATER_THAN_EQUALS expr  (65)
	expr : expr . NOT_EQUALS expr  (66)
	expr : expr . EQUALS_EQUALS expr  (67)

	THEN  shift 74
	PLUS  shift 52
	MINUS  shift 53
	MULTIPLY  shift 54
	DIVIDE  shift 55
	LESS_THAN  shift 56
	GREATER_THAN  shift 57
	EQUALS_EQUALS  shift 58
	NOT_EQUALS  shift 59
	LESS_THAN_EQUALS  shift 60
	GREATER_THAN_EQUALS  shift 61
	AND  shift 63
	OR  shift 64
	.  error


state 41
	stmt : PRINT LEFT_PAREN . expr RIGHT_PAREN SEMICOLON  (7)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 75
	function_call  goto 39
	member_access  goto 28


state 42
	return_stmt : RETURN expr . SEMICOLON  (44)
	expr : expr . PLUS expr  (56)
	expr : expr . MINUS expr  (57)
	expr : expr . MULTIPLY expr  (58)
	expr : expr . DIVIDE expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . LESS_THAN expr  (62)
	expr : expr . GREATER_THAN expr  (63)
	expr : expr . LESS_THAN_EQUALS expr  (64)
	expr : expr . GREATER_THAN_EQUALS expr  (65)
	expr : expr . NOT_EQUALS expr  (66)
	expr : expr . EQUALS_EQUALS expr  (67)

	PLUS  shift 52
	MINUS  shift 53
	MULTIPLY  shift 54
	DIVIDE  shift 55
	LESS_THAN  shift 56
	GREATER_THAN  shift 57
	EQUALS_EQUALS  shift 58
	NOT_EQUALS  shift 59
	LESS_THAN_EQUALS  shift 60
	GREATER_THAN_EQUALS  shift 61
	SEMICOLON  shift 76
	AND  shift 63
	OR  shift 64
	.  error


state 43
	stmt : FUNCTION IDENTIFIER . LEFT_PAREN parameter_list RIGHT_PAREN LEFT_BRACE stmt_list RIGHT_BRACE  (18)

	LEFT_PAREN  shift 77
	.  error


state 44
	stmt : DEFINE IDENTIFIER . EQUALS expr SEMICOLON  (14)

	EQUALS  shift 78
	.  error


state 45
	object_creation : CREATE IDENTIFIER . AS PLAYER LEFT_BRACE property_list RIGHT_BRACE SEMICOLON  (22)
	object_creation : CREATE IDENTIFIER . AS ENEMY LEFT_BRACE property_list RIGHT_BRACE SEMICOLON  (23)
	object_creation : CREATE IDENTIFIER . AS PLATFORM LEFT_BRACE property_list RIGHT_BRACE SEMICOLON  (24)
	object_creation : CREATE IDENTIFIER . AS ITEM LEFT_BRACE property_list RIGHT_BRACE SEMICOLON  (25)
	object_creation : CREATE IDENTIFIER . AS GAME LEFT_BRACE property_list RIGHT_BRACE SEMICOLON  (26)
	object_creation : CREATE IDENTIFIER . AS LEVEL LEFT_BRACE property_list RIGHT_BRACE SEMICOLON  (27)

	AS  shift 79
	.  error


state 46
	collision_handler : ON COLLISION . LEFT_PAREN IDENTIFIER COMMA IDENTIFIER RIGHT_PAREN LEFT_BRACE stmt_list RIGHT_BRACE  (36)

	LEFT_PAREN  shift 80
	.  error


state 47
	expr : MINUS expr .  (54)
	expr : expr . PLUS expr  (56)
	expr : expr . MINUS expr  (57)
	expr : expr . MULTIPLY expr  (58)
	expr : expr . DIVIDE expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . LESS_THAN expr  (62)
	expr : expr . GREATER_THAN expr  (63)
	expr : expr . LESS_THAN_EQUALS expr  (64)
	expr : expr . GREATER_THAN_EQUALS expr  (65)
	expr : expr . NOT_EQUALS expr  (66)
	expr : expr . EQUALS_EQUALS expr  (67)

	.  reduce 54


state 48
	expr : expr . PLUS expr  (56)
	expr : expr . MINUS expr  (57)
	expr : expr . MULTIPLY expr  (58)
	expr : expr . DIVIDE expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . LESS_THAN expr  (62)
	expr : expr . GREATER_THAN expr  (63)
	expr : expr . LESS_THAN_EQUALS expr  (64)
	expr : expr . GREATER_THAN_EQUALS expr  (65)
	expr : expr . NOT_EQUALS expr  (66)
	expr : expr . EQUALS_EQUALS expr  (67)
	expr : LEFT_PAREN expr . RIGHT_PAREN  (68)

	PLUS  shift 52
	MINUS  shift 53
	MULTIPLY  shift 54
	DIVIDE  shift 55
	LESS_THAN  shift 56
	GREATER_THAN  shift 57
	EQUALS_EQUALS  shift 58
	NOT_EQUALS  shift 59
	LESS_THAN_EQUALS  shift 60
	GREATER_THAN_EQUALS  shift 61
	RIGHT_PAREN  shift 81
	AND  shift 63
	OR  shift 64
	.  error


state 49
	stmt_list : stmt .  (45)

	.  reduce 45


state 50
	stmt : LEFT_BRACE stmt_list . RIGHT_BRACE  (17)
	stmt_list : stmt_list . stmt  (46)

	error  shift 4
	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 7
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	WHILE  shift 11
	IF  shift 12
	PRINT  shift 13
	RETURN  shift 14
	FUNCTION  shift 15
	DEFINE  shift 16
	CREATE  shift 17
	ON  shift 18
	MINUS  shift 19
	SEMICOLON  shift 20
	LEFT_PAREN  shift 21
	LEFT_BRACE  shift 22
	RIGHT_BRACE  shift 82
	NOT  shift 23
	.  error

	stmt  goto 83
	expr  goto 25
	function_call  goto 26
	return_stmt  goto 27
	member_access  goto 28
	object_creation  goto 29
	collision_handler  goto 30


state 51
	expr : NOT expr .  (55)
	expr : expr . PLUS expr  (56)
	expr : expr . MINUS expr  (57)
	expr : expr . MULTIPLY expr  (58)
	expr : expr . DIVIDE expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . LESS_THAN expr  (62)
	expr : expr . GREATER_THAN expr  (63)
	expr : expr . LESS_THAN_EQUALS expr  (64)
	expr : expr . GREATER_THAN_EQUALS expr  (65)
	expr : expr . NOT_EQUALS expr  (66)
	expr : expr . EQUALS_EQUALS expr  (67)

	.  reduce 55


state 52
	expr : expr PLUS . expr  (56)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 84
	function_call  goto 39
	member_access  goto 28


state 53
	expr : expr MINUS . expr  (57)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 85
	function_call  goto 39
	member_access  goto 28


state 54
	expr : expr MULTIPLY . expr  (58)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 86
	function_call  goto 39
	member_access  goto 28


state 55
	expr : expr DIVIDE . expr  (59)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 87
	function_call  goto 39
	member_access  goto 28


state 56
	expr : expr LESS_THAN . expr  (62)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 88
	function_call  goto 39
	member_access  goto 28


state 57
	expr : expr GREATER_THAN . expr  (63)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 89
	function_call  goto 39
	member_access  goto 28


state 58
	expr : expr EQUALS_EQUALS . expr  (67)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 90
	function_call  goto 39
	member_access  goto 28


state 59
	expr : expr NOT_EQUALS . expr  (66)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 91
	function_call  goto 39
	member_access  goto 28


state 60
	expr : expr LESS_THAN_EQUALS . expr  (64)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 92
	function_call  goto 39
	member_access  goto 28


state 61
	expr : expr GREATER_THAN_EQUALS . expr  (65)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 93
	function_call  goto 39
	member_access  goto 28


state 62
	stmt : expr SEMICOLON .  (6)

	.  reduce 6


state 63
	expr : expr AND . expr  (60)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 94
	function_call  goto 39
	member_access  goto 28


state 64
	expr : expr OR . expr  (61)

	INTEGER  shift 5
	FLOAT  shift 6
	IDENTIFIER  shift 37
	STRING  shift 8
	TRUE  shift 9
	FALSE  shift 10
	MINUS  shift 19
	LEFT_PAREN  shift 21
	NOT  shift 23
	.  error

	expr  goto 95
	function_call  goto 39
	member_access  goto 28


state 65
	stmt : function_call SEMICOLON .  (19)

	.  reduce 19


state 66
	member_access : member_access DOT . IDENTIFIER  (35)

	IDENTIFIER  shift 96
	.  error


state 67
	stmt : IDENTIFIER EQUALS expr . SEMICOLON  (8)
	expr : expr . PLUS expr  (56)
	expr : expr . MINUS expr  (57)
	expr : expr . MULTIPLY expr  (58)
	expr : expr . DIVIDE expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . LESS_THAN expr  (62)
	expr : expr . GREATER_THAN expr  (63)
	expr : expr . LESS_THAN_EQUALS expr  (64)
	expr : expr . GREATER_THAN_EQUALS expr  (65)
	expr : expr . NOT_EQUALS expr  (66)
	expr : expr . EQUALS_EQUALS expr  (67)

	PLUS  shift 52
	MINUS  shift 53
	MULTIPLY  shift 54
	DIVIDE  shift 55
	LESS_THAN  shift 56
	GREATER_THAN  shift 57
	EQUALS_EQUALS  shift 58
	NOT_EQUALS  shift 59
	LESS_THAN_EQUALS  shift 60
	GREATER_THAN_EQUALS  shift 61
	SEMICOLON  shift 97
	AND  shift 63
	OR  shift 64
	.  error


state 68
	argument_list : expr .  (42)
	argument_list : expr . COMMA argument_list  (43)
	expr : expr . PLUS expr  (56)
	expr : expr . MINUS expr  (57)
	expr : expr . MULTIPLY expr  (58)
	expr : expr . DIVIDE expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . LESS_THAN expr  (62)
	expr : expr . GREATER_THAN expr  (63)
	expr : expr . LESS_THAN_EQUALS expr  (64)
	expr : expr . GREATER_THAN_EQUALS expr  (65)
	expr : expr . NOT_EQUALS expr  (66)
	expr : expr . EQUALS_EQUALS expr  (67)

	PLUS  shift 52
	MINUS  shift 53
	MULTIPLY  shift 54
	DIVIDE  shift 55
	LESS_THAN  shift 56
	GREATER_THAN  shift 57
	EQUALS_EQUALS  shift 58
	NOT_EQUALS  shift 59
	LESS_THAN_EQUALS  shift 60
	GREATER_THAN_EQUALS  shift 61
	COMMA  shift 98
	AND  shift 63
	OR  shift 64
	RIGHT_PAREN  reduce 42
	RIGHT_BRACKET  reduce 42


state 69
	function_call : IDENTIFIER LEFT_PAREN argument_list . RIGHT_PAREN  (40)

	RIGHT_PAREN  shift 99
	.  error

